--- a/KGSample/KGSample/KGSample/Style/StyleDic.xaml
+++ b/KGSample/KGSample/KGSample/Style/StyleDic.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:Mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                    xmlns:local="clr-namespace:WpfApp1.Style">
+                    xmlns:local="clr-namespace:KGSample.Style">
 
 	<!-- グループ：通常-->
 	<Style x:Key="gp-normal" TargetType="GroupBox" >
