--- a/KGSample/KGSample/KGSample/Style/StyleDic.xaml
+++ b/KGSample/KGSample/KGSample/Style/StyleDic.xaml
@@ -3,11 +3,119 @@
                     xmlns:Mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                     xmlns:local="clr-namespace:KGSample.Style">
 
-	<!-- グループ：通常-->
-	<Style x:Key="gp-normal" TargetType="GroupBox" >
-		<Setter Property="VerticalAlignment" Value="Top" />
-		<Setter Property="HorizontalAlignment" Value="Left" />
-		<Setter Property="Background" Value="#FFFFFFFF" />
-		<Setter Property="Foreground" Value="#FF777777" />
-	</Style>
-</ResourceDictionary>
+		<!-- グループ：通常-->
+		<Style x:Key="gp-normal" TargetType="GroupBox" >
+			<Setter Property="VerticalAlignment" Value="Top" />
+			<Setter Property="HorizontalAlignment" Value="Left" />
+			<Setter Property="Background" Value="#FFFFFFFF" />
+			<Setter Property="Foreground" Value="#FF777777" />
+			<Setter Property="Height" Value="300" />
+			<Setter Property="Width" Value="500" />
+			<Setter Property="Margin" Value="10, 10, 0, 0" />
+		</Style>
+
+		<!-- グリッド：カレンダー用 -->
+		<Style x:Key="grid-calendar" TargetType="Grid" >
+			<Setter Property="VerticalAlignment" Value="Center" />
+			<Setter Property="HorizontalAlignment" Value="Center" />
+			<Setter Property="Background" Value="#FFFFFFFF" />
+			<Setter Property="Height" Value="258" />
+			<Setter Property="Width" Value="450" />
+			<Setter Property="Margin" Value="0, 0, 0, 0" />
+		</Style>
+
+		<!-- テキストブロック：日付セル（通常） -->
+		<Style x:Key="txb-date" TargetType="TextBlock">
+			<Setter Property="FontSize" Value="12" />
+			<Setter Property="Foreground" Value="Black" />
+			<Setter Property="Padding" Value="0, 10, 10, 0" />
+			<Setter Property="VerticalAlignment" Value="Top" />
+			<Setter Property="HorizontalAlignment" Value="Right" />
+		</Style>
+
+		<!-- テキストブロック：日付セル（土曜） -->
+		<Style x:Key="txb-date-sat" TargetType="TextBlock" BasedOn="{StaticResource txb-date}">
+			<Setter Property="Foreground" Value="Blue" />
+		</Style>
+
+		<!-- テキストブロック：日付セル（日曜） -->
+		<Style x:Key="txb-date-sun" TargetType="TextBlock" BasedOn="{StaticResource txb-date}">
+			<Setter Property="Foreground" Value="Red" />
+		</Style>
+
+		<!-- 四角形：外枠用 -->
+		<Style x:Key="rec-border" TargetType="Rectangle">
+			<Setter Property="Stroke" Value="Black" />
+			<Setter Property="StrokeThickness" Value="1" />
+			<Setter Property="Grid.ColumnSpan" Value="7" />
+			<Setter Property="Grid.RowSpan" Value="7" />
+		</Style>
+
+		<!-- 四角形：下線用 -->
+		<Style x:Key="rec-underlining" TargetType="Rectangle">
+			<Setter Property="Stroke" Value="Black" />
+			<Setter Property="StrokeThickness" Value="1" />
+			<Setter Property="Height" Value="1" />
+			<Setter Property="VerticalAlignment" Value="Bottom" />
+			<Setter Property="Grid.ColumnSpan" Value="7" />
+		</Style>
+
+		<!-- 四角形：曜日 -->
+		<Style x:Key="rec-week" TargetType="Rectangle">
+			<Setter Property="Fill" Value="#FF8000" />
+			<Setter Property="VerticalAlignment" Value="Stretch" />
+			<Setter Property="HorizontalAlignment" Value="Stretch" />
+			<Setter Property="Grid.Row" Value="0" />
+			<Setter Property="Margin" Value="1, 1, 0, 0" />
+			<Setter Property="Panel.ZIndex" Value="0" />
+		</Style>
+
+		<!-- 四角形：曜日 -->
+		<Style x:Key="rec-week-sat" TargetType="Rectangle" BasedOn="{StaticResource rec-week}">
+			<Setter Property="Margin" Value="1, 1, 1, 0" />
+		</Style>
+
+		<!-- 四角形：日付セル（通常） -->
+		<Style x:Key="rec-date" TargetType="Rectangle">
+			<Setter Property="VerticalAlignment" Value="Stretch" />
+			<Setter Property="HorizontalAlignment" Value="Stretch" />
+			<Setter Property="Fill" Value="Transparent" />
+			<Setter Property="Margin" Value="0, -1, -1, 0" />
+			<!-- トリガーを使ってマウスオーバーで背景色を変更する -->
+			<Style.Triggers>
+				<Trigger Property="IsMouseOver" Value="true">
+					<Trigger.Setters>
+						<Setter Property="Margin" Value="0, 0, 0, 0" />
+						<Setter Property="Fill" Value="#60d0ff" />
+						<Setter Property="Opacity" Value="0.1"/>
+					</Trigger.Setters>
+				</Trigger>
+			</Style.Triggers>
+		</Style>
+
+		<!-- 四角形：日付セル（土曜） → 最後の列を微調整-->
+		<Style x:Key="rec-date-sat" TargetType="Rectangle" BasedOn="{StaticResource rec-date}">
+			<Setter Property="Margin" Value="0, -1, 0, 0" />
+		</Style>
+
+		<!-- 四角形：日付セル（選択） -->
+		<Style x:Key="rec-date-selected" TargetType="Rectangle">
+			<Setter Property="VerticalAlignment" Value="Stretch" />
+			<Setter Property="HorizontalAlignment" Value="Stretch" />
+			<Setter Property="Stroke" Value="Black" />
+			<Setter Property="StrokeDashArray" Value="1 1" />
+			<Setter Property="StrokeThickness" Value="1"/>
+			<Setter Property="Fill" Value="#007acc" />
+			<Setter Property="Opacity" Value="0.2"/>
+		</Style>
+
+		<!-- ラベル：曜日ヘッダ-->
+		<Style x:Key="lb-week" TargetType="Label">
+			<Setter Property="VerticalAlignment" Value="Center" />
+			<Setter Property="HorizontalAlignment" Value="Center" />
+			<Setter Property="Grid.Row" Value="0" />
+			<Setter Property="FontSize" Value="11" />
+			<Setter Property="Padding" Value="0" />
+		</Style>
+
+	</ResourceDictionary>
