--- a/KGSample/KGSample/KGSample/Style/StyleDic.xaml
+++ b/KGSample/KGSample/KGSample/Style/StyleDic.xaml
@@ -9,8 +9,8 @@
 			<Setter Property="HorizontalAlignment" Value="Left" />
 			<Setter Property="Background" Value="#FFFFFFFF" />
 			<Setter Property="Foreground" Value="#FF777777" />
-			<Setter Property="Height" Value="300" />
-			<Setter Property="Width" Value="500" />
+			<!--<Setter Property="Height" Value="300" />
+			<Setter Property="Width" Value="500" />-->
 			<Setter Property="Margin" Value="10, 10, 0, 0" />
 		</Style>
 
@@ -19,8 +19,8 @@
 			<Setter Property="VerticalAlignment" Value="Center" />
 			<Setter Property="HorizontalAlignment" Value="Center" />
 			<Setter Property="Background" Value="#FFFFFFFF" />
-			<Setter Property="Height" Value="258" />
-			<Setter Property="Width" Value="450" />
+			<!--<Setter Property="Height" Value="258" />
+			<Setter Property="Width" Value="450" />-->
 			<Setter Property="Margin" Value="0, 0, 0, 0" />
 		</Style>
 
@@ -62,7 +62,7 @@
 
 		<!-- 四角形：曜日 -->
 		<Style x:Key="rec-week" TargetType="Rectangle">
-			<Setter Property="Fill" Value="#FF8000" />
+			<Setter Property="Fill" Value="#888888" />
 			<Setter Property="VerticalAlignment" Value="Stretch" />
 			<Setter Property="HorizontalAlignment" Value="Stretch" />
 			<Setter Property="Grid.Row" Value="0" />
@@ -72,10 +72,18 @@
 
 		<!-- 四角形：曜日 -->
 		<Style x:Key="rec-week-sat" TargetType="Rectangle" BasedOn="{StaticResource rec-week}">
-			<Setter Property="Margin" Value="1, 1, 1, 0" />
+		<Setter Property="Fill" Value="#0088FF" />
+		<Setter Property="Stroke" Value="#FFFFFF" />
+
+		<Setter Property="Margin" Value="1, 1, 1, 0" />
 		</Style>
 
-		<!-- 四角形：日付セル（通常） -->
+	<Style x:Key="rec-week-sun" TargetType="Rectangle" BasedOn="{StaticResource rec-week}">
+		<Setter Property="Fill" Value="#FFEEFF" />
+	</Style>
+
+
+	<!-- 四角形：日付セル（通常） -->
 		<Style x:Key="rec-date" TargetType="Rectangle">
 			<Setter Property="VerticalAlignment" Value="Stretch" />
 			<Setter Property="HorizontalAlignment" Value="Stretch" />
