--- a/KGSample/KGSample/KGSample/GCalender.xaml
+++ b/KGSample/KGSample/KGSample/GCalender.xaml
@@ -13,11 +13,11 @@
 		<ResourceDictionary Source="/Style/StyleDic.xaml"/>
 	</Window.Resources>
 	<Grid x:Name="MainContainer" HorizontalAlignment="Stretch" Margin="10,10,10,10">
-		<Label x:Name="lbYearMonth" Content="年月：" HorizontalAlignment="Left" Margin="10,20,0,0" VerticalAlignment="Top" />
-		<ComboBox x:Name="cbYearMonth" HorizontalAlignment="Left" Margin="61,20,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cbYearMonth_SelectionChanged"/>
-		<Grid x:Name="CalendarContainer"  Margin="0,53,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" />
+		<ComboBox x:Name="cbYearMonth" HorizontalAlignment="Left" Margin="16,20,0,0" VerticalAlignment="Top" Width="139" SelectionChanged="cbYearMonth_SelectionChanged" FontSize="18"/>
+		<Button x:Name="today_bt" Content="本日" HorizontalAlignment="Left" Margin="195,21,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.387,0.485" Click="Today_bt_Click"/>
+		<Grid x:Name="CalendarContainer"  Margin="0,65,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" />
 		<!--<Grid x:Name="CalendarContainer" HorizontalAlignment="Left" Height="317" Margin="0,53,0,0" VerticalAlignment="Top" Width="517"/>-->
-		<Label x:Name="lbDate" Content="選択された日付：" HorizontalAlignment="Left" Margin="222,20,0,0" VerticalAlignment="Top"/>
-		<Label x:Name="lbSelectedDate" Content="" HorizontalAlignment="Left" Margin="333,20,0,0" VerticalAlignment="Top"/>
+		<Label x:Name="lbDate" Content="選択された日付：" HorizontalAlignment="Left" Margin="476,20,0,0" VerticalAlignment="Top"/>
+		<Label x:Name="lbSelectedDate" Content="" HorizontalAlignment="Left" Margin="587,20,0,0" VerticalAlignment="Top"/>
 	</Grid>
 </Mah:MetroWindow>
