--- a/KGSample/KGSample/KGSample/Style/StyleDic.xaml
+++ b/KGSample/KGSample/KGSample/Style/StyleDic.xaml
@@ -17,7 +17,7 @@
 		<!-- グリッド：カレンダー用 -->
 		<Style x:Key="grid-calendar" TargetType="Grid" >
 			<Setter Property="VerticalAlignment" Value="Center" />
-			<Setter Property="HorizontalAlignment" Value="Center" />
+			<!--<Setter Property="HorizontalAlignment" Value="Center" />-->
 			<Setter Property="Background" Value="#FFFFFFFF" />
 			<!--<Setter Property="Height" Value="258" />
 			<Setter Property="Width" Value="450" />-->
@@ -28,7 +28,9 @@
 		<Style x:Key="txb-date" TargetType="TextBlock">
 			<Setter Property="FontSize" Value="12" />
 			<Setter Property="Foreground" Value="Black" />
-			<Setter Property="Padding" Value="0, 10, 10, 0" />
+			<Setter Property="Margin" Value="5" />
+			<Setter Property="Background" Value="Transparent" />
+		<!--<Setter Property="Padding" Value="0, 0, 0, 0" />-->
 			<Setter Property="VerticalAlignment" Value="Top" />
 			<Setter Property="HorizontalAlignment" Value="Right" />
 		</Style>
@@ -68,9 +70,8 @@
 		<!-- 四角形：曜日 -->
 		<Style x:Key="rec-week" TargetType="Rectangle">
 			<Setter Property="Fill" Value="#888888" />
-		<Setter Property="Stroke" Value="#8F8F8F" />
-		<Setter Property="StrokeThickness" Value="1" />
-		<!--<Setter Property="StrokeDashArray" Value="1 1" />-->
+			<Setter Property="Stroke" Value="#8F8F8F" />
+			<Setter Property="StrokeThickness" Value="1" />
 			<Setter Property="VerticalAlignment" Value="Stretch" />
 			<Setter Property="HorizontalAlignment" Value="Stretch" />
 			<Setter Property="Grid.Row" Value="0" />
@@ -92,17 +93,16 @@
 		<Setter Property="Fill" Value="#EFEFEF" />
 	</Style>
 
-
 	<!-- 四角形：日付セル（通常） -->
 		<Style x:Key="rec-date" TargetType="Rectangle">
 		<Setter Property="Stroke" Value="#8F8F8F" />
 		<Setter Property="StrokeThickness" Value="1" />
 		<Setter Property="VerticalAlignment" Value="Stretch" />
-			<Setter Property="HorizontalAlignment" Value="Stretch" />
+			<!--<Setter Property="HorizontalAlignment" Value="Stretch" />-->
 			<Setter Property="Fill" Value="Transparent" />
 			<Setter Property="Margin" Value="3, 3, 1, 1" />
 			<!-- トリガーを使ってマウスオーバーで背景色を変更する -->
-			<Style.Triggers>
+			<!--<Style.Triggers>
 				<Trigger Property="IsMouseOver" Value="true">
 					<Trigger.Setters>
 						<Setter Property="Margin"  Value="0, 0, 1, 0" />
@@ -110,7 +110,7 @@
 						<Setter Property="Opacity" Value="0.1"/>
 					</Trigger.Setters>
 				</Trigger>
-			</Style.Triggers>
+			</Style.Triggers>-->
 		</Style>
 
 		<!-- 四角形：日付セル（土曜） → 最後の列を微調整-->
@@ -144,4 +144,68 @@
 			<Setter Property="Padding" Value="0" />
 	</Style>
 
-	</ResourceDictionary>
+	<Style x:Key="sp-bace" TargetType="StackPanel">
+		<Setter Property="VerticalAlignment" Value="Top" />
+		<Setter Property="HorizontalAlignment" Value="Left" />
+		<Setter Property="Background" Value="#FFFFFF" />
+		<Setter Property="Width" Value="135" />
+		<Setter Property="Margin" Value="2,0,0,0" />
+		<!--<Setter Property="Stroke" Value="#8F8F8F" />
+		<Setter Property="StrokeThickness" Value="1" />
+		<Setter Property="VerticalAlignment" Value="Stretch" />-->
+		<!--<Setter Property="Grid.Row" Value="0" />-->
+		<!-- トリガーを使ってマウスオーバーで背景色を変更する -->
+		<Style.Triggers>
+			<Trigger Property="IsMouseOver" Value="true">
+				<Trigger.Setters>
+					<Setter Property="Margin"  Value="0, 0, 1, 0" />
+					<Setter Property="Background" Value="#60d0ff" />
+					<Setter Property="Opacity" Value="0.1"/>
+				</Trigger.Setters>
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+	<!--イベント-->
+	<Style x:Key="sp-event" TargetType="StackPanel">
+		<Setter Property="VerticalAlignment" Value="Top" />
+		<Setter Property="HorizontalAlignment" Value="Left" />
+		<Setter Property="Background" Value="#FFFFFF" />
+		<!--<Setter Property="Height" Value="20" />-->
+		<!--<Setter Property="Width" Value="1" />-->
+		<Setter Property="Margin" Value="2" />
+		<!--<Setter Property="StrokeDashArray" Value="1 1" />-->
+		<!--<Setter Property="Grid.Row" Value="0" />-->
+		<!--<Setter Property="Margin" Value="1, 1, 0, 0" />-->
+		<Setter Property="Panel.ZIndex" Value="9" />
+	</Style>
+
+	<BitmapImage x:Key="Image-circle" UriSource="./Resources/circle.png" />
+
+	<Style x:Key="bt-event" TargetType="Button">
+		<Setter Property="FontSize" Value="12" />
+		<Setter Property="HorizontalContentAlignment" Value="Left" />
+		<Setter Property="VerticalAlignment" Value="Top" />
+		<Setter Property="HorizontalAlignment" Value="Left" />
+		<Setter Property="Margin" Value="1" />
+		<Setter Property="Panel.ZIndex" Value="99" />
+	</Style>
+
+	<Style x:Key="bt-event-one" TargetType="Button" BasedOn="{StaticResource bt-event}">
+		<Setter Property="Foreground" Value="Black" />
+		<Setter Property="BorderThickness"  Value="0" />
+		<Setter Property="Background" Value="Transparent" />
+	</Style>
+
+	<Style x:Key="bt-event-passes" TargetType="Button" BasedOn="{StaticResource bt-event}">
+		<Setter Property="BorderThickness"  Value="1" />
+		<Setter Property="Foreground" Value="White" />
+		<Setter Property="Background" Value="#FF1E6FBC" />
+		<!--<Setter Property="r" Value="#FF1E6FBC" />-->
+	</Style>
+
+
+	<!--Button クラス		https://docs.microsoft.com/ja-jp/dotnet/api/system.windows.controls.button?view=netcore-3.1-->
+	<!--https://docs.microsoft.com/ja-jp/dotnet/framework/wpf/controls/walkthrough-create-a-button-by-using-xaml-->
+
+</ResourceDictionary>
