--- a/KGSample/KGSample/KGSample/GCalender.xaml
+++ b/KGSample/KGSample/KGSample/GCalender.xaml
@@ -8,7 +8,7 @@
         GlowBrush="{DynamicResource AccentColorBrush}"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen" 
-        Title="スケジュール管理" Height="800" Width="1050" SizeChanged="MetroWindow_SizeChanged">
+        Title="スケジュール管理" Height="800" Width="1050" SizeChanged="MetroWindow_SizeChanged" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto">
 	<Window.Resources>
 		<ResourceDictionary Source="/Style/StyleDic.xaml"/>
 	</Window.Resources>
