--- a/KGSample/KGSample/KGSample/Style/StyleDic.xaml
+++ b/KGSample/KGSample/KGSample/Style/StyleDic.xaml
@@ -39,8 +39,8 @@
 
 		<!-- テキストブロック：日付セル（土曜） -->
 		<Style x:Key="txb-date-sat" TargetType="TextBlock" BasedOn="{StaticResource txb-date}">
-		<Setter Property="Margin" Value="4,4,8,4" />
-		<Setter Property="Foreground" Value="Blue" />
+			<Setter Property="Margin" Value="4,4,8,4" />
+			<Setter Property="Foreground" Value="Blue" />
 		</Style>
 
 		<!-- テキストブロック：日付セル（日曜） -->
@@ -242,12 +242,17 @@
 		<Setter Property="Foreground" Value="Black" />
 		<Setter Property="BorderThickness"  Value="0" />
 		<Setter Property="Background" Value="Transparent" />
+		<Setter Property="VerticalAlignment" Value="Center" />
+		<Setter Property="Margin" Value="20,0,0,0" />
 	</Style>
 
-	<Style x:Key="lv-event-one" TargetType="ListView">
-		<Setter Property="Foreground" Value="Black" />
-		<Setter Property="BorderThickness"  Value="0" />
+	<Style x:Key="txb-event-one" TargetType="TextBlock">
+		<Setter Property="FontSize" Value="12" />
+		<Setter Property="Margin" Value="6,0,0,0" />
 		<Setter Property="Background" Value="Transparent" />
+		<Setter Property="VerticalAlignment" Value="Center" />
+		<!--<Setter Property="HorizontalAlignment" Value="Right" />-->
+		<Setter Property="Panel.ZIndex" Value="80" />
 	</Style>
 
 
