--- a/KGSample/KGSample/KGSample/Style/StyleDic.xaml
+++ b/KGSample/KGSample/KGSample/Style/StyleDic.xaml
@@ -9,18 +9,13 @@
 			<Setter Property="HorizontalAlignment" Value="Left" />
 			<Setter Property="Background" Value="#FFFFFFFF" />
 			<Setter Property="Foreground" Value="#FF777777" />
-			<!--<Setter Property="Height" Value="300" />
-			<Setter Property="Width" Value="500" />-->
 			<Setter Property="Margin" Value="10, 10, 0, 0" />
 		</Style>
 
 		<!-- グリッド：カレンダー用 -->
 		<Style x:Key="grid-calendar" TargetType="Grid" >
 			<Setter Property="VerticalAlignment" Value="Center" />
-			<!--<Setter Property="HorizontalAlignment" Value="Center" />-->
 			<Setter Property="Background" Value="#FFFFFFFF" />
-			<!--<Setter Property="Height" Value="258" />
-			<Setter Property="Width" Value="450" />-->
 			<Setter Property="Margin" Value="0,0, 0, 0" />
 		</Style>
 
@@ -28,7 +23,6 @@
 		<Style x:Key="txb-date" TargetType="TextBlock">
 			<Setter Property="FontSize" Value="12" />
 			<Setter Property="Height" Value="20" />
-			<!--<Setter Property="Width" Value="100" />-->
 			<Setter Property="Foreground" Value="Black" />
 			<Setter Property="Margin" Value="4" />
 			<Setter Property="Background" Value="Transparent" />
@@ -181,12 +175,7 @@
 		<Setter Property="VerticalAlignment" Value="Top" />
 		<Setter Property="HorizontalAlignment" Value="Left" />
 		<Setter Property="Background" Value="#FFFFFF" />
-		<!--<Setter Property="Height" Value="20" />-->
-		<!--<Setter Property="Width" Value="1" />-->
 		<Setter Property="Margin" Value="2" />
-		<!--<Setter Property="StrokeDashArray" Value="1 1" />-->
-		<!--<Setter Property="Grid.Row" Value="0" />-->
-		<!--<Setter Property="Margin" Value="1, 1, 0, 0" />-->
 		<Setter Property="Panel.ZIndex" Value="9" />
 	</Style>
 
@@ -246,15 +235,18 @@
 		<Setter Property="Margin" Value="20,0,0,0" />
 	</Style>
 
+	<Style x:Key="bt-event-other" TargetType="Button" BasedOn="{StaticResource bt-event-one}">
+		<Setter Property="Margin" Value="5,0,0,0" />
+	</Style>
+
+
 	<Style x:Key="txb-event-one" TargetType="TextBlock">
 		<Setter Property="FontSize" Value="12" />
 		<Setter Property="Margin" Value="6,0,0,0" />
 		<Setter Property="Background" Value="Transparent" />
 		<Setter Property="VerticalAlignment" Value="Center" />
-		<!--<Setter Property="HorizontalAlignment" Value="Right" />-->
 		<Setter Property="Panel.ZIndex" Value="80" />
 	</Style>
-
 
 	<!--Button クラス		https://docs.microsoft.com/ja-jp/dotnet/api/system.windows.controls.button?view=netcore-3.1-->
 	<!--https://docs.microsoft.com/ja-jp/dotnet/framework/wpf/controls/walkthrough-create-a-button-by-using-xaml-->
