--- a/0000/GEventEdit.xaml
+++ b/0000/GEventEdit.xaml
@@ -5,18 +5,74 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KGSample"
         mc:Ignorable="d"
-        Title="GEventEdit" Height="645.965" Width="800">
+        Title="GEventEdit" FontSize="12" Height="800" Width="1050" Closing="Window_Closing">
+
+
 	<Grid>
-		<WebBrowser x:Name="mainweb" HorizontalAlignment="Left" Height="481" VerticalAlignment="Top" Width="774" Margin="10,41,0,0"/>
-		<ListView x:Name="file_lb" HorizontalAlignment="Left" Height="78" Margin="380,527,0,0" VerticalAlignment="Top" Width="322" SelectionChanged="ListView_SelectionChanged">
-			<ListView.View>
-				<GridView>
-					<GridViewColumn/>
-				</GridView>
-			</ListView.View>
-		</ListView>
-		<Button Content="送信" HorizontalAlignment="Left" Margin="707,0,0,10" Width="75" Height="27" VerticalAlignment="Bottom"/>
-		<TextBox x:Name="url_tv" HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="772"/>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition x:Name="top_col" Width="Auto"/>
+			<ColumnDefinition Width="Auto"/>
+			<ColumnDefinition Width="Auto"/>
+			<ColumnDefinition Width="Auto"/>
+			<ColumnDefinition Width="Auto"/>
+			<ColumnDefinition Width="Auto"/>
+			<ColumnDefinition Width="Auto"/>
+			<ColumnDefinition Width="Auto"/>
+			<ColumnDefinition Width="Auto"/>
+			<ColumnDefinition x:Name="end_col"/>
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition x:Name="titol_row" Height="Auto"/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition x:Name="attach_row" Height="Auto"/>
+		</Grid.RowDefinitions>
+
+		<Label Grid.Row="0"  Grid.Column="1" Grid.ColumnSpan="6" Name="url_lb" Content="url"  HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+
+		<Label Grid.Row="1" Grid.Column="0"   Content="×" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="1"  Grid.Column="1"  Grid.ColumnSpan="6" Name="titol_tv" Content="タイトル" FontSize="24"  HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Button  Grid.Row="1" Grid.Column="8"  Name="save_bt" Content="保存"  HorizontalAlignment="Center" Margin="5,0,5,0"  VerticalAlignment="Bottom" />
+		<ComboBox Grid.Row="1" Grid.Column="9" HorizontalAlignment="Center" Margin="5,0,5,0" VerticalAlignment="Bottom" />
+
+		<Label Grid.Row="2" Grid.Column="0"   Content="日時" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="2" Grid.Column="1"  Name="start_date" Content="2020年　開始日" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="2" Grid.Column="2"  Name="start_time" Content="開始時間" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="2" Grid.Column="3"  Content="～"  HorizontalAlignment="Left"  Margin="10,0,10,0" VerticalAlignment="Top"/>
+		<Label Grid.Row="2" Grid.Column="4"   Name="end_time" Content="終了時間"  HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top"/>
+		<Label Grid.Row="2" Grid.Column="5"  Name="end_date" Content="2020年　終了日"  HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top"/>
+		<Label Grid.Row="2" Grid.Column="6"  Name="gmt" Content="(GMT+09:00) 日本標準時"  HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top"/>
+
+		<Label Grid.Row="3" Grid.Column="1"   Content="終日" Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="3"  Grid.Column="4"  Grid.ColumnSpan="6" Name="rep" Content="繰り返し" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+
+		<Label Grid.Row="4" Grid.Column="0"   Content="場所" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="4"  Grid.Column="1"  Grid.ColumnSpan="6" Name="location" Content="場所" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+
+		<!--通知  / ゲスト-->
+		<Label Grid.Row="6" Grid.Column="0"   Content="×" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="6"  Grid.Column="6"  Grid.ColumnSpan="6" Name="color_id" Content="カラー" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+
+		<Label Grid.Row="8" Grid.Column="0"   Content="予定" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="8"  Grid.Column="1"  Grid.ColumnSpan="2" Name="til" Content="有無" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="8"  Grid.Column="4"  Grid.ColumnSpan="3" Name="koukai" Content="デフォルトの公開予定" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+
+		<Label Grid.Row="9" Grid.Column="0"   Content="詳細" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="9"  Grid.Column="1"  Grid.ColumnSpan="6" Name="idil" Content="詳細" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+
+		<Label Grid.Row="10" Grid.Column="0"   Content="添付" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="10"  Grid.Column="1"  Grid.ColumnSpan="4" Name="drive" Content="親フォルダ" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<ListBox Grid.Row="10" Grid.Column="5" Grid.ColumnSpan="2" Grid.RowSpan="3" Name="attach_lb" HorizontalAlignment="Left"  VerticalAlignment="Stretch" Width="228" Height="*" Margin="0.8,0.2,0,0"/>
+		<Button  Grid.Row="11" Grid.Column="8"  Name="attach_bt" Content="添付"  HorizontalAlignment="Center" Margin="5,0,5,0"  VerticalAlignment="Bottom" />
 
 	</Grid>
 </Window>
