--- a/KGSample/KGSample/KGSample/GEventEdit.xaml
+++ b/KGSample/KGSample/KGSample/GEventEdit.xaml
@@ -1,25 +1,22 @@
-﻿<Window x:Class="KGSample.GEventEdit"
+﻿<Mah:MetroWindow x:Class="KGSample.GEventEdit"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KGSample"
+        xmlns:Mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        GlowBrush="{DynamicResource AccentColorBrush}"
         mc:Ignorable="d"
-        Title="GEventEdit" FontSize="12" Height="800" Width="1050" Closing="Window_Closing">
-
-
-	<Grid>
+        WindowStartupLocation="CenterScreen" 
+        Title="スケジュール管理" Height="800" Width="1050" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto">
+	<Window.Resources>
+		<ResourceDictionary Source="/Style/StyleDic.xaml"/>
+	</Window.Resources>
+	<Grid x:Name="MainContainer" HorizontalAlignment="Stretch" Margin="10,10,10,10">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition x:Name="top_col" Width="Auto"/>
 			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition x:Name="end_col"/>
+			<ColumnDefinition Width="*"/>
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"/>
@@ -37,42 +34,106 @@
 			<RowDefinition x:Name="attach_row" Height="Auto"/>
 		</Grid.RowDefinitions>
 
-		<Label Grid.Row="0"  Grid.Column="1" Grid.ColumnSpan="6" Name="url_lb" Content="url"  HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="0"  Grid.Column="1" Grid.ColumnSpan="6" 
+								Name="url_lb" Content="url"  HorizontalAlignment="Left"  Margin="0,0,0,0"
+								VerticalAlignment="Top" />
 
-		<Label Grid.Row="1" Grid.Column="0"   Content="×" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
-		<Label Grid.Row="1"  Grid.Column="1"  Grid.ColumnSpan="6" Name="titol_tv" Content="タイトル" FontSize="24"  HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
-		<Button  Grid.Row="1" Grid.Column="8"  Name="save_bt" Content="保存"  HorizontalAlignment="Center" Margin="5,0,5,0"  VerticalAlignment="Bottom" />
-		<ComboBox Grid.Row="1" Grid.Column="9" HorizontalAlignment="Center" Margin="5,0,5,0" VerticalAlignment="Bottom" />
+		<Button Grid.Row="1" Grid.Column="0"
+							  Name="del_bt" Content="×"  
+							HorizontalAlignment="Center" Margin="5,0,5,0"  VerticalAlignment="Bottom" />
+		<TextBox Grid.Row="1"  Grid.Column="1" 
+								Name="titol_tv" Text="タイトル" FontSize="24"  HorizontalAlignment="Left"  Margin="0,0,0,0" 
+								VerticalAlignment="Top" />
+
+		<StackPanel Grid.Row="1" Grid.Column="2"   Orientation="Horizontal"
+								HorizontalAlignment="Right" VerticalAlignment="Bottom"  
+								 Margin="5,0,5,0" >
+			<Button  Name="save_bt" Content="保存"  HorizontalAlignment="Center" Margin="5,0,5,0"  
+								VerticalAlignment="Bottom" />
+			<ComboBox HorizontalAlignment="Center"
+								VerticalAlignment="Bottom" />
+		</StackPanel>
 
 		<Label Grid.Row="2" Grid.Column="0"   Content="日時" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
-		<Label Grid.Row="2" Grid.Column="1"  Name="start_date" Content="2020年　開始日" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
-		<Label Grid.Row="2" Grid.Column="2"  Name="start_time" Content="開始時間" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
-		<Label Grid.Row="2" Grid.Column="3"  Content="～"  HorizontalAlignment="Left"  Margin="10,0,10,0" VerticalAlignment="Top"/>
-		<Label Grid.Row="2" Grid.Column="4"   Name="end_time" Content="終了時間"  HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top"/>
-		<Label Grid.Row="2" Grid.Column="5"  Name="end_date" Content="2020年　終了日"  HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top"/>
-		<Label Grid.Row="2" Grid.Column="6"  Name="gmt" Content="(GMT+09:00) 日本標準時"  HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top"/>
+		<StackPanel Grid.Row="2"    Grid.Column="1"   Orientation="Horizontal"
+								HorizontalAlignment="Left" Height="25" Margin="5,0.2,0,0"  
+								 VerticalAlignment="Top" >
+			<Label
+							Name="start_date" Content="2020年　開始日" HorizontalAlignment="Left"  Margin="0,0,0,0" 
+							VerticalAlignment="Top" />
+			<Label 
+							Name="start_time" Content="開始時間" HorizontalAlignment="Left"  Margin="0,0,0,0" 
+							VerticalAlignment="Top" />
+			<Label 
+							Content="～"  HorizontalAlignment="Left"  Margin="10,0,10,0" 
+							VerticalAlignment="Top"/>
+			<Label  Name="end_time" Content="終了時間"  HorizontalAlignment="Left"  
+							Margin="0,0,0,0" VerticalAlignment="Top"/>
+			<Label 
+						Name="end_date" Content="2020年　終了日"  HorizontalAlignment="Left"  Margin="0,0,0,0" 
+						VerticalAlignment="Top"/>
+		</StackPanel>
+		<Label Grid.Row="2" Grid.Column="3"  
+						Name="gmt" Content="(GMT+09:00) 日本標準時"  
+						HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top"/>
 
-		<Label Grid.Row="3" Grid.Column="1"   Content="終日" Margin="0,0,0,0" VerticalAlignment="Top" />
-		<Label Grid.Row="3"  Grid.Column="4"  Grid.ColumnSpan="6" Name="rep" Content="繰り返し" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="3" Grid.Column="0"   
+						Content="終日" Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="3"  Grid.Column="1"  
+						Name="rep" Content="繰り返し" HorizontalAlignment="Left"  Margin="0,0,0,0" 
+						VerticalAlignment="Top" />
 
-		<Label Grid.Row="4" Grid.Column="0"   Content="場所" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
-		<Label Grid.Row="4"  Grid.Column="1"  Grid.ColumnSpan="6" Name="location" Content="場所" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="4" Grid.Column="0"   
+						Content="場所" HorizontalAlignment="Right"  Margin="0,0,0,0" 
+						VerticalAlignment="Top" />
+		<Label Grid.Row="4"  Grid.Column="1"  Grid.ColumnSpan="3" 
+						Name="location" Content="場所" HorizontalAlignment="Left"  Margin="0,0,0,0" 
+						VerticalAlignment="Top" />
 
 		<!--通知  / ゲスト-->
-		<Label Grid.Row="6" Grid.Column="0"   Content="×" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
-		<Label Grid.Row="6"  Grid.Column="6"  Grid.ColumnSpan="6" Name="color_id" Content="カラー" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="6" Grid.Column="0"   
+						Content="×" HorizontalAlignment="Right"  Margin="0,0,0,0" 
+						VerticalAlignment="Top" />
+		<StackPanel Grid.Row="6" Grid.Column="1"   Orientation="Horizontal"
+								 Margin="5,0,5,0" >
+			<Label Grid.Row="6" Grid.Column="1"   
+						Content="アカウント"  />
+			<Label Grid.Row="6"  Grid.Column="2"  Grid.ColumnSpan="6" 
+						Name="color_id" Content="カラー" />
+		</StackPanel>
 
-		<Label Grid.Row="8" Grid.Column="0"   Content="予定" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
-		<Label Grid.Row="8"  Grid.Column="1"  Grid.ColumnSpan="2" Name="til" Content="有無" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
-		<Label Grid.Row="8"  Grid.Column="4"  Grid.ColumnSpan="3" Name="koukai" Content="デフォルトの公開予定" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="8" Grid.Column="0"   
+						Content="予定" 
+					/>
+		<StackPanel Grid.Row="8" Grid.Column="1"   Orientation="Horizontal"
+								 Margin="5,0,5,0" >
+			<Label  Name="til" Content="有無"/>
+			<Label Name="koukai" Content="デフォルトの公開予定" Margin="5,0,0,0" />
+		</StackPanel>
 
 		<Label Grid.Row="9" Grid.Column="0"   Content="詳細" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
-		<Label Grid.Row="9"  Grid.Column="1"  Grid.ColumnSpan="6" Name="idil" Content="詳細" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<TextBox Grid.Row="9"  Grid.Column="1" 
+						Name="idil" Text="詳細"  />
 
-		<Label Grid.Row="10" Grid.Column="0"   Content="添付" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
+		<Label Grid.Row="10" Grid.Column="0"   
+					Content="添付" HorizontalAlignment="Right"   />
 		<Label Grid.Row="10"  Grid.Column="1"  Grid.ColumnSpan="4" Name="drive" Content="親フォルダ" HorizontalAlignment="Left"  Margin="0,0,0,0" VerticalAlignment="Top" />
-		<ListBox Grid.Row="10" Grid.Column="5" Grid.ColumnSpan="2" Grid.RowSpan="3" Name="attach_lb" HorizontalAlignment="Left"  VerticalAlignment="Stretch" Width="228" Height="*" Margin="0.8,0.2,0,0"/>
-		<Button  Grid.Row="11" Grid.Column="8"  Name="attach_bt" Content="添付"  HorizontalAlignment="Center" Margin="5,0,5,0"  VerticalAlignment="Bottom" />
-
+		<StackPanel Grid.Row="10" Grid.Column="1"  Grid.RowSpan="2" Orientation="Horizontal"
+								 Margin="5,0,5,0" >
+			<TreeView Width="200" Height="200" Margin="0,0,0,0" />
+			<ListBox Width="200"  Height="200" Margin="8,0,0,0"
+								 Name="dfile_lb"/>
+		</StackPanel>
+		<StackPanel Grid.Row="10" Grid.Column="3"  Grid.RowSpan="2" Orientation="Horizontal"
+								 Margin="5,0,5,0" >
+			<ListBox Name="attach_lb" HorizontalAlignment="Left"  VerticalAlignment="Stretch" 
+								Width="228"  Height="200"
+								Margin="0.8,0,0,0"/>
+			<Button  Name="attach_bt" Content="添付"  
+							HorizontalAlignment="Center" Margin="5,0,5,0"  VerticalAlignment="Bottom" />
+		</StackPanel>
 	</Grid>
-</Window>
+</Mah:MetroWindow>
+
+
+<!--MahApps.Metroを使ってみた		http://sourcechord.hatenablog.com/entry/2016/02/23/012511-->
