--- a/KGSample/KGSample/KGSample/Style/StyleDic.xaml
+++ b/KGSample/KGSample/KGSample/Style/StyleDic.xaml
@@ -239,7 +239,6 @@
 		<Setter Property="Margin" Value="5,0,0,0" />
 	</Style>
 
-
 	<Style x:Key="txb-event-one" TargetType="TextBlock">
 		<Setter Property="FontSize" Value="12" />
 		<Setter Property="Margin" Value="6,0,0,0" />
@@ -247,7 +246,16 @@
 		<Setter Property="VerticalAlignment" Value="Center" />
 		<Setter Property="Panel.ZIndex" Value="80" />
 	</Style>
+	<!--エディター	 -->
 
+
+	<!--汎用-->
+	<Style x:Key="sp-horizontal" TargetType="StackPanel">
+		<Setter Property="Orientation" Value="Horizontal" />
+		<Setter Property="Margin" Value="0,5,0,5" />
+		<Setter Property="Background" Value="Transparent" />
+		<Setter Property="VerticalAlignment" Value="Center" />
+	</Style>
 	<!--Button クラス		https://docs.microsoft.com/ja-jp/dotnet/api/system.windows.controls.button?view=netcore-3.1-->
 	<!--https://docs.microsoft.com/ja-jp/dotnet/framework/wpf/controls/walkthrough-create-a-button-by-using-xaml-->
 
